# mttrchrdsapi

./: README.md  build.sh  manage.py  pyproject.toml  render.yaml
mttrchrdsapi/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  urls_api.py  urls_endpoints.py  views.py  wsgi.py
mttrchrdsapi/fixtures/: initial_data.json
mttrchrdsapi/migrations/: 0001_initial.py  0002_delete_show.py  0002_remove_show_image_url_remove_showcreator_image_url_and_more.py  0003_gamecategory_gamecreator_gameplatform_showplatform_and_more.py  0004_activity.py  0005_remove_activity_name_alter_activity_game_activity_and_more.py  0006_game_thumbnail_show_thumbnail.py  0007_game_rating_show_rating.py
