[tool.poetry]
name = "mttrchrdsapi"
version = "0.1.0"
description = ""
authors = ["Matt Richards <me@mttrchrds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.13"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^22.0.0"
djangorestframework = "^3.15.1"
pyyaml = "^6.0.1"
uritemplate = "^4.1.1"
pillow = "^10.3.0"
django-storages = "^1.14.3"
boto3 = "^1.34.113"
django-cors-headers = "^4.3.1"
inflection = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
